# achadinhosv3

./: .env.example  .gitignore  CLAUDE.md  INSTRUCOES.txt  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  railway.worker.json
.claude/: settings.json
.github/workflows/: release-agente.yml
agente/: .gitignore  README.md  build.spec  installer.iss  pyproject.toml
agente/agent/: avisos.py  busca_amazon.py  busca_ml.py  busca_padrao_ml.py  busca_shopee.py  cancelamento.py  capabilities.py  chrome.py  config.py  ingest_client.py  linkbuilder_ml.py  local_server.py  login_amazon.py  login_ml.py  login_shopee.py  login_whatsapp.py  main.py  setup.py  tray.py  ws_client.py  ws_progresso.py
agente/agent/postador/: saude.py  whatsapp.py
alembic/: env.py  script.py.mako
alembic/versions/: 0001_inicial_schema.py  0002_produtos_org_e_templates.py  0003_buscas_ml_e_afiliado.py  0004_credenciais_plataformas.py  0005_planos_flags_restricao.py  0006_agentes_unique.py  0006_agentes_unique_org_user_nome.py  0007_mappings_nichos_ml.py  0008_usuarios_afiliados.py  0009_redirects_curto.py  0010_busca_tipo_marketplaces.py  0011_produto_criado_por.py  0012_produtos_curadoria.py  0013_tarefas_progresso.py  0014_tarefas_duracao.py  0015_produtos_comissao_extra.py  0016_usuario_produto_personal.py  0017_solicitacoes_personalizadas.py  0018_template_criado_por.py  0019_seed_super_admin.py  0020_log_entries.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: agentes.py  auth.py  buscas.py  canais.py  curadoria.py  diagnostico.py  grupos.py  health.py  lote.py  mappings_nichos.py  produtos.py  tarefas.py  templates.py  usuarios.py  ws_agente.py
app/core/: __init__.py  buscas_padrao.py  comissoes.py  comissoes_ml_categorias.py  config.py  crypto.py  log_buffer.py  logging.py  marketplaces.py  redis.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  agente.py  busca.py  grupo.py  log_entry.py  organizacao.py  produto.py  redirect.py  solicitacao.py  tarefa.py  usuario.py
app/schemas/: __init__.py  agente.py  auth.py  busca.py  canal_grupo.py  comum.py  produto.py  tarefa.py  usuario.py
app/services/: __init__.py  afiliado_ml_writer.py  afiliado_service.py  agente_avisos.py  agente_registry.py  agente_service.py  busca_service.py  buscas_padrao_service.py  capabilities_service.py  curadoria_service.py  dispatcher.py  limites.py  linkbuilder.py  lote_service.py  papel_service.py  personalizado_service.py  redirect_service.py  scoring.py  selecao_service.py  signup_service.py  solicitacao_service.py  telegram_client.py  templates_service.py
app/web/: routes.py
app/web/static/: style.css
app/web/templates/: admin_fila_personalizados.html  admin_logs.html  agente_baixar.html  agente_instalador_em_breve.html  agentes.html  base.html  busca_form.html  buscas.html  canais.html  canal_form.html  conta.html  curadoria_top.html  dashboard.html  grupo_form.html  grupos.html  login.html  lote.html  mappings_nichos.html  onboarding.html  planos.html  produto_form.html  produtos.html  produtos_buscar_rapida.html  produtos_import.html  produtos_personalizados.html  signup.html  tarefa_detalhe.html  tarefas.html  template_form.html  templates.html  usuario_afiliados.html  usuario_credenciais.html  usuario_form_editar.html  usuarios.html
app/web/templates/_macros/: paginacao.html
app/workers/: __init__.py  celery_app.py  scheduler_tasks.py  solicitacoes_tasks.py  telegram_tasks.py
docker/: Dockerfile
docs/: contrato_busca_marketplace.md  contrato_handlers_ws.md  decisoes.md  deploy_railway.md  migrar_v2.md  protocolo_agente.md  sessao_2026-05-15-16.md  sessao_continuacao.md
scripts/: __init__.py  bootstrap_producao.py  criar_admin.py  criar_agente_dev.py  gerar_icones_pwa.py  limpar_banco.py
tests/: conftest.py  test_health.py  test_security.py
