[project]
name = "achadinhos"
version = "3.0.0"
description = "Plataforma SaaS de automação de marketing de afiliados"
requires-python = ">=3.11"
authors = [{ name = "Silvio Vargas" }]

dependencies = [
    # ── Web framework ──────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",          # servidor ASGI
    "websockets>=13.0",                    # WS nativo

    # ── Validação / serialização ───────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",            # carrega .env tipado

    # ── Banco ──────────────────────────────────────
    "sqlalchemy>=2.0.35",                  # ORM (síncrono e async)
    "asyncpg>=0.29.0",                     # driver Postgres async
    "psycopg2-binary>=2.9.9",              # driver síncrono (Alembic, scripts)
    "alembic>=1.13.0",                     # migrações

    # ── Filas / cache ──────────────────────────────
    "celery>=5.4.0",
    "redis>=5.1.0",
    "flower>=2.0.0",                       # UI pra monitorar Celery (opcional)

    # ── Auth ───────────────────────────────────────
    "bcrypt>=4.2.0",                       # hash de senha (uso direto, sem passlib)
    "pyjwt>=2.9.0",                        # JWT
    "python-multipart>=0.0.12",            # form-data (login)
    "cryptography>=43.0.0",                # cifragem reversível (Fase 4b.1)

    # ── HTTP / scraping leve ───────────────────────
    "httpx>=0.27.0",                       # async, pro Telegram + scrapers HTTP
    "beautifulsoup4>=4.12.0",              # parser HTML

    # ── Imagens ────────────────────────────────────
    "pillow>=10.4.0",

    # ── Templates HTML ─────────────────────────────
    "jinja2>=3.1.4",

    # ── Logging estruturado ────────────────────────
    "structlog>=24.4.0",

    # ── Utilidades ─────────────────────────────────
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",                     # retry com backoff
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",                         # linter + formatter (rápido, em Rust)
    # ipython e mypy removidos da build do container — instalar localmente
    # se quiser usar, pra não inflar imagem em ~150 MB.
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Ativa bons defaults; ignora E501 (linha longa) porque já temos line-length
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
